<resources>

    <string name="app_name">ATcnea</string>
    <string name="title_activity_main">ATcnea</string>
    <string name="hello_world">¡Hola Mundo!</string>
    <string name="test">¡Hola Mundo!</string>
    <string name="action_settings">Configuración</string>
    <string name="not_network_connection_title">Wifi</string>
    <string name="not_network_connection">Aquí va un texo</string>
    <string name="not_network_connection_yes">Activar</string>
    <string name="not_network_connection_cancel">Cancelar</string>
    <string name="error_socket_exception">x</string>
    <string name="error_socket_time_out">x</string>
    <string name="error_know_host">x</string>
    <string name="error_unknow">x</string>
    <string name="server_not_found">No se ha encontrado ningún servidor.</string>
    <string name="title_activity_file">Actividad de Archivo</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">Dirección de correo electrónico no válida.</string>
    <string name="error_invalid_password">Contraseña muy corta.</string>
    <string name="error_incorrect_password">Contraseña es incorrecta.</string>
    <string name="error_field_required">Campo vacío.</string>
    <string name="permission_rationale">"."</string>
    <string name="nombre_clase">Nombre de la clase</string>
    <string name="tipo_resumen">Tipo de resumen</string>
    <string name="evaluacion">La evaluación otorgada es X</string>
    <string name="adj_archivo">Adjuntar archivo</string>
    <string name="dialogFileTitle">Alerta</string>
    <string name="dialogFileMessage">Desea enviar el archivo:</string>
    <string name="negativeButton">Cancelar</string>
    <string name="positiveButtonSendFile">Enviar</string>
    <string name="drawer_open">Abrir</string>
    <string name="drawer_close">Cerrar</string>
    <string name="title_activity_main2">Actividad Principal 2</string>
    <string name="navigation_drawer_open">Abrir el cajón de navegación</string>
    <string name="navigation_drawer_close">Cerrar el cajón de navegación</string>
    <string name="title_activity_file_cancelled">Alerta</string>
    <string name="dialog_file_message_cancelled">El profesor no aceptó su archivo.</string>
    <string name="positive_button_cancelled_file">Aceptar</string>
    <string name="title_activity_video_streming">Actividad de Transmisión de Video</string>
    <string name="drawer_item_menu_home">Inicio</string>
    <string name="drawer_item_menu_files">Ficheros</string>
    <string name="drawer_item_menu_chat">Charla</string>
    <string name="drawer_item_menu_rise_hand">Levantar la mano</string>
    <string name="login_btn">Entrar</string>
    <string name="send_answer">Enviar</string>
    <string name="btn_ok">Aceptar</string>
    <string name="hint_add_profile">Nombre</string>
    <string name="drawer_item_menu_ra">Realidad aumentada</string>
    <string name="title_copy">Copiando Archivo.</string>
    <string name="msgCancelConection">El profesor no aceptó su solicitud de conexión.</string>
    <string name="title_activity_lock_screen">Bloquear la actividad de la pantalla</string>
    <string name="msg_not_disconnect">No se puede desconectar de la clase.</string>
    <string name="name_hint">Nombre</string>
    <string name="apellidos_hint">Apellidos</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="profile_setting_image">Cambiar imagen</string>
    <string name="profile_setting_details">Editar perfil</string>
    <string name="title_dialog_edit_details">Detalles de su cuenta</string>
    <string name="error_emailnotvalid">Dirección de correo electrónico no válida.</string>
    <string name="error_e_name">Comenzar con mayúscula y solo se permiten caracteres alfanuméricos.</string>
    <string name="error_e_email">Dirección de correo electrónico no válida.</string>
    <string name="error_e_apell">Comenzar con mayúscula y solo se permiten caracteres alfanuméricos.</string>
    <string name="interactive_question_title">Pregunta Interactiva</string>
    <string name="interactive_question_reading">Tiempo de Lectura</string>
    <string name="interactive_question_result_good">Respuesta correcta</string>
    <string name="interactive_question_result_wrong">Respuesta incorrecta</string>
    <string name="text_exit">Salir</string>
    <string name="text_wait">Esperando</string>
    <string name="profile_setting_add">Nuevo Estudiante</string>
    <string name="msg_student_list">Seleccione su usuario o adicione uno.</string>
    <string name="user_hint">Usuario</string>
    <string name="pass_hint">Contraseña</string>
    <string name="pass_repeat_hint">Repita su contraseña</string>
    <string name="error_e_user">Solo caracteres alfanuméricos y los símbolos . @.</string>
    <string name="error_not_null">Campo obligatorio.</string>
    <string name="error_e_pass_repeat">La contraseña no coincide.</string>
    <string name="error_e_pass">Solo caracteres alfanuméricos y los símbolos * . _ @.</string>
    <string name="profile_setting_change_user">Salir</string>
    <string name="lock_screen_title">Pantalla Bloqueada</string>
    <string name="raice_hand_title">Levantar Mano</string>
    <string name="down_hand_title">Bajar Mano</string>
    <string name="raice_hand_lock">La opción Levantar Mano ha sido bloqueada.</string>
    <string name="numeric_error">Este campo no permite caracteres numéricos.</string>
    <string name="raice_hand_allow">Usted ha sido seleccionado.</string>
    <string name="raice_hand_deny">Su petición ha sido denegada.</string>
    <string name="full_error">La clase se encuentra llena.</string>
    <string name="authentication_error">Error al autenticarse.</string>
    <string name="conflict">Ya hay un usuario en la clase con sus mismos datos.</string>
    <string name="cancelled">Se ha cancelado su solicitud.</string>
    <string name="lock_chat">Su charla ha sido bloqueada.</string> **
    <string name="chat_hint">Escriba su mensaje</string>
    <string name="btn_send">ENVIAR</string>
    <string name="msg_lesson_close">El profesor ha cerrado la clase.</string>
    <string name="msg_app_close">El profesor ha cerrado la aplicación.</string>
    <string name="msg_estudent_close">El profesor lo ha desconectado de la clase.</string>
    <string name="msg_not_change_user">No puede salir porque esta conectado a una clase.</string>
    <string name="msg_delete_student">¿Desea eliminar el estudiante?</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_delete">Eliminar</string>
    <string name="msg_chat_notify">Ahora se encuentra en la sala.</string>
    <string name="msg_wrong_conection">Se ha perdido la conexión con la clase.</string>
    <string name="quiz_result_M">Mal</string>
    <string name="quiz_result_R">Regular</string>
    <string name="quiz_result_B">Bien</string>
    <string name="quiz_result_E">Excelente</string>
    <string name="quiz_result_points">Puntos</string>
    <string name="str_es">Español</string>
    <string name="str_en">Inglés</string>
    <string name="str_fr">Francés</string>
    <string name="bad_pass">Contraseña incorrecta.</string>
    <string-array name="languages">
    <item>@string/str_en</item>
    <item>@string/str_es</item>
    <item>@string/str_fr</item>
    </string-array>
    <string name="quiz_evaluation">Nota</string>
    <string name="attempts_default_text">Intentos</string>
    <string name="login_incorrect_password">Contraseña incorrecta.</string>
    <string name="login_empty_password">Contraseña vacia.</string>
    <string name="login_remember_password">Recordar contraseña</string>
    <string name="prompt_password_confirm">Confirmar contraseña</string>
    <string name="search">Buscar</string>
    <string name="drawer_item_menu_board">Pizarra</string>
    <string name="title_activity_share_screen">Compartir la actividad de la pantalla</string>
    <string name="task_menu_title_default">Valor por defecto</string>
    <string name="drawer_item_menu_task">Listado de tareas</string>

    <!--Tareas-->
    <string name="task_title">Título de la tarea</string>
    <string name="task_description">Enunciado:</string>
    <string name="task_status">Estado</string>
    <string name="task_status_send">Estado de entrega:</string>
    <string name="task_status_send_given">Entregado</string>
    <string name="task_status_send_no_given">No entregado</string>
    <string name="task_status_evaluation">Calificación:</string>
    <string name="task_status_evaluation_value">puntos</string>
    <string name="task_status_evaluation_no_value">Sin calificar</string>
    <string name="task_type">Tipo de tarea:</string>
    <string name="task_type_no_group">Individual</string>
    <string name="task_type_group">Grupo</string>
    <string name="task_adjunct">Archivos adjuntos:</string>
    <string name="task_response_text">Redacción:</string>
    <string name="task_response_resource">Archivos adjuntos:</string>
    <string name="task_title_default">No hay tareas seleccionadas.</string>
    <string name="task_open_file_error">No se pudo abrir el archivo.</string>

    <string name="error_e_email_empty">ass</string>

    <string name="input_text_hint">Texto</string>

    <string name="summary_title_empty">Sumario</string>
    <string name="preferent_discovery">Puerto de busqueda</string>
    <string name="preferent_server">Puerto del servidor</string>
    <string name="preferent_file">Puerto de archivos</string>
    <string name="menu_class_title">Nombre de la clase</string>
    <string name="dialog_file_message_error">El archivo no puede sobrepasar los</string>
    <string name="dialog_adjunct_task_error_limit">No se pueden enviar más de</string>
    <string name="dialog_adjunct_task_error_limit2">archivos.</string>
    <string name="check_connection_time" translatable="false">3000</string>
    <string name="task_open_file_size_error">El archivo sobrepasa el límite de</string>
    <string name="task_open_file_size_error_2">Mb.</string>
    <string name="task_responce_text_error">No se puede enviar el texto vacío.</string>
    <string name="task_responce_file_empty_error">No se han adjuntado archivos.</string>
    <string name="preferent_ip">Ip del servidor</string>
    <string name="interactive_question_refuce">La pregunta fue respondida por otro estudiante.</string>
    <string name="dialog_file_message_error2">Mb.</string>
    <string name="disconect_text">El profesor ha bloqueado la desconexión.</string>
    <string name="disconect_title">Desconección</string>


    <string name="server_port">5756</string>
    <string name="client_port" translatable="false">5755</string>

    <string name="server_discovery_port">5757</string>

    <string name="server_file_port">5760</string>
    <string name="client_file_port" translatable="false">5758</string>

    <string name="socket_timeout_discovery">10000</string>
    <string name="msg_not_disconnect_delete">El profesor le ha eliminado de la clase.</string>
</resources>
