<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    android:weightSum="1">

    <!--Para los datos-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_body_layout"
        android:background="@color/login_backgound_color"
        android:layout_alignTop="@+id/login_img_layout"
        android:layout_marginTop="50dp"
        android:paddingTop="50dp"
        android:layout_marginBottom="35dp"
        android:paddingBottom="35dp"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_clase"
            android:id="@+id/userName"
            android:textSize="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/login_text_color"
            />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textColorHint="@color/login_text_hint_color"
            >

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/login_edited_color"
                android:textColorHint="@color/login_text_hint_color"
                android:textCursorDrawable="@drawable/color_cursor" />

        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/login_text_color"
            android:gravity="center_horizontal"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:id="@+id/login_incorect_password"
            android:visibility="invisible"
            android:text="@string/login_incorrect_password"/>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textSize="20dp"
            android:id="@+id/login_remember_password"
            android:layout_marginBottom="20dp"
            android:text="@string/login_remember_password"
            android:textColor="@color/login_text_color"
            android:buttonTint="@color/login_text_color"
            android:backgroundTint="@color/login_text_color"/>
            </android.support.v7.widget.LinearLayoutCompat>
        </ScrollView>
    </LinearLayout>

    <!--Para la imagen del usuario-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/login_img_layout"
        android:gravity="center"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:id="@+id/iv"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_app_android_class_icon_big"
            app:civ_border_color="@color/login_backgound_color"
            app:civ_border_width="10dp"/>

    </LinearLayout>

    <!--Para el boton-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/login_body_layout"
        android:layout_marginBottom="-35dp"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/btn_login_deny"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="50dp"
            android:src="@drawable/ic_cancel"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/btn_login_acept"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp"
            android:src="@drawable/ic_login_acept"/>

    </RelativeLayout>

</RelativeLayout>
