<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/black">

    <LinearLayout
        android:id="@+id/hand_msg_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentRight="true"
        android:visibility="gone">
        <ImageView
            android:id="@+id/img_good"
            android:layout_marginRight="16dp"
            android:layout_gravity="center_vertical"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_accept"/>
        <TextView
            android:id="@+id/text_msg"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="jhsadjh asjkd ajsdh"
            android:textSize="24sp"
            android:textColor="@color/cardview_light_background"/>
        <Button
            android:id="@+id/btn_ok"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_ok"
            android:layout_marginLeft="16dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lock_screen_title"
        android:id="@+id/title"
        android:textSize="32sp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/cardview_light_background"
        android:layout_centerVertical="true"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/raice_hand_title"
            android:textSize="24sp"
            android:textColor="@color/cardview_light_background"
            android:id="@+id/text_hand"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"/>

        <ImageButton
            android:id="@+id/btn_hand_rice"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/rise_hand_selector"
            android:layout_toRightOf="@+id/text_hand"
            android:saveEnabled="false"/>
        <ImageButton
            android:visibility="gone"
            android:id="@+id/btn_hand_down"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/down_hand_selector"
            android:layout_toRightOf="@+id/text_hand"
            android:saveEnabled="false"/>
    </RelativeLayout>


</RelativeLayout>
